--- a/app/src/main/res/navigation/nav_graph_application.xml
+++ b/app/src/main/res/navigation/nav_graph_application.xml
@@ -6,7 +6,7 @@
 
     <fragment
         android:id="@+id/characterListFragment"
-        android:name="com.test.feature_character_list.presentation.CharacterListFragment"
+        android:name="com.test.feature_character_list.presentation.CharactersListFragment"
         android:label="CharacterListFragment" />
 
     <include app:graph="@navigation/nav_graph_detail" />
