--- a/feature-character_list/src/main/res/layout/character_item.xml
+++ b/feature-character_list/src/main/res/layout/character_item.xml
@@ -5,10 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/item_height">
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/characterImage"
         android:layout_width="@dimen/image_size"
         android:layout_height="@dimen/image_size"
+        android:adjustViewBounds="true"
+        android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="@id/guideline_begin"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -17,13 +19,14 @@
 
     <TextView
         android:id="@+id/characterName"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/default_size"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/guideline_begin_text"
-        app:layout_constraintEnd_toStartOf="@id/guideline_end"/>
+        app:layout_constraintEnd_toStartOf="@id/guideline_end"
+        tools:text="@string/name" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_begin"
