--- a/utils/src/main/res/anim/slide_out_left.xml
+++ b/utils/src/main/res/anim/slide_out_left.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:shareInterpolator="false"
-    android:interpolator="@android:anim/decelerate_interpolator" >
+    android:interpolator="@android:anim/decelerate_interpolator">
 
     <translate
         android:duration="300"
@@ -9,7 +9,8 @@
         android:fromXDelta="0%"
         android:toXDelta="-10%" />
 
-    <alpha android:fromAlpha="1.0"
+    <alpha
+        android:fromAlpha="1.0"
         android:toAlpha="0.2"
         android:duration="300" />
 </set>
