--- a/utils/src/main/res/anim/slide_out_right.xml
+++ b/utils/src/main/res/anim/slide_out_right.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:shareInterpolator="false"
-    android:interpolator="@android:anim/decelerate_interpolator" >
+    android:interpolator="@android:anim/decelerate_interpolator">
 
     <translate
         android:duration="200"
@@ -9,7 +9,8 @@
         android:fromXDelta="-10%"
         android:toXDelta="0%" />
 
-    <alpha android:fromAlpha="0.2"
+    <alpha
+        android:fromAlpha="0.2"
         android:toAlpha="1.0"
         android:duration="200" />
 </set>
