--- a/feature-character_list/src/main/res/menu/appbar_menu.xml
+++ b/feature-character_list/src/main/res/menu/appbar_menu.xml
@@ -6,5 +6,6 @@
         android:contentDescription="@string/content_description_search"
         android:title="@string/search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
+        android:icon="@drawable/search"
         app:showAsAction="always|collapseActionView" />
 </menu>
