--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="white_gray">#fafafa</color>
+    <color name="gray">#dbdde4</color>
+    <color name="black_gray">#292929</color>
 </resources>
