--- a/feature-character_list/src/main/res/layout/character_item.xml
+++ b/feature-character_list/src/main/res/layout/character_item.xml
@@ -1,51 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="@dimen/item_height">
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/characterImage"
-        android:layout_width="@dimen/image_size"
-        android:layout_height="@dimen/image_size"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop"
-        app:layout_constraintStart_toStartOf="@id/guideline_begin"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:srcCompat="@tools:sample/avatars"
-        android:contentDescription="@string/character_image_description" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/characterName"
-        android:layout_width="@dimen/default_size"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/guideline_begin_text"
-        app:layout_constraintEnd_toStartOf="@id/guideline_end"
-        tools:text="@string/name" />
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/characterImage"
+            android:layout_width="@dimen/image_size"
+            android:layout_height="@dimen/image_size"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/character_image_description"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@id/guideline_begin"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@tools:sample/avatars" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_begin"
-        android:layout_width="@dimen/default_size"
-        android:layout_height="@dimen/default_size"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="@dimen/guideLine_begin_size" />
+        <TextView
+            android:id="@+id/characterName"
+            android:layout_width="@dimen/default_size"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/guideline_end_text"
+            app:layout_constraintStart_toEndOf="@id/guideline_begin_text"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="@string/name" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_begin_text"
-        android:layout_width="@dimen/default_size"
-        android:layout_height="@dimen/default_size"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="@dimen/guideLine_text_begin_size" />
+        <ImageView
+            android:id="@+id/go_to_details_icon"
+            android:layout_width="@dimen/go_to_detail_size"
+            android:layout_height="@dimen/go_to_detail_size"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/guideline_end_text"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/right_arrow" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline_end"
-        android:layout_width="@dimen/default_size"
-        android:layout_height="@dimen/default_size"
-        android:orientation="vertical"
-        app:layout_constraintGuide_end="@dimen/guideLine_end_size" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_begin"
+            android:layout_width="@dimen/default_size"
+            android:layout_height="@dimen/default_size"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="@dimen/guideLine_begin_size" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_begin_text"
+            android:layout_width="@dimen/default_size"
+            android:layout_height="@dimen/default_size"
+            android:orientation="vertical"
+            app:layout_constraintGuide_begin="@dimen/guideLine_text_begin_size" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_end_text"
+            android:layout_width="@dimen/default_size"
+            android:layout_height="@dimen/default_size"
+            android:orientation="vertical"
+            app:layout_constraintGuide_end="@dimen/guideLine_end_size" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
