--- a/feature-character_list/src/main/res/values/dimens.xml
+++ b/feature-character_list/src/main/res/values/dimens.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="image_size">70dp</dimen>
+    <dimen name="image_size">80dp</dimen>
     <dimen name="guideLine_begin_size">20dp</dimen>
     <dimen name="guideLine_end_size">40dp</dimen>
     <dimen name="guideLine_text_begin_size">115dp</dimen>
     <dimen name="item_height">112dp</dimen>
     <dimen name="default_size">0dp</dimen>
+    <dimen name="go_to_detail_size">12dp</dimen>
 </resources>
