--- a/feature-detail/src/main/res/layout/detail.xml
+++ b/feature-detail/src/main/res/layout/detail.xml
@@ -19,6 +19,8 @@
             android:layout_width="@dimen/image_size"
             android:layout_height="@dimen/image_size"
             android:contentDescription="@string/character_image_description"
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="@+id/guideline_center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars" />
@@ -30,7 +32,7 @@
             android:text="@string/character_name"
             app:layout_constraintBottom_toTopOf="@id/characterGender"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
-            app:layout_constraintStart_toEndOf="@id/guideline_begin"
+            app:layout_constraintStart_toEndOf="@id/guideline_center"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="spread" />
 
@@ -41,7 +43,7 @@
             android:text="@string/character_gender"
             app:layout_constraintBottom_toTopOf="@id/characterStatus"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
-            app:layout_constraintStart_toEndOf="@id/guideline_begin"
+            app:layout_constraintStart_toEndOf="@id/guideline_center"
             app:layout_constraintTop_toBottomOf="@id/characterName" />
 
         <TextView
@@ -51,7 +53,7 @@
             android:text="@string/character_status"
             app:layout_constraintBottom_toTopOf="@id/characterSpecies"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
-            app:layout_constraintStart_toEndOf="@id/guideline_begin"
+            app:layout_constraintStart_toEndOf="@id/guideline_center"
             app:layout_constraintTop_toBottomOf="@id/characterGender" />
 
         <TextView
@@ -61,7 +63,7 @@
             android:text="@string/characters_species"
             app:layout_constraintBottom_toTopOf="@id/characterCreated"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
-            app:layout_constraintStart_toEndOf="@id/guideline_begin"
+            app:layout_constraintStart_toEndOf="@id/guideline_center"
             app:layout_constraintTop_toBottomOf="@id/characterStatus" />
 
         <TextView
@@ -71,15 +73,15 @@
             android:text="@string/character_created"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
-            app:layout_constraintStart_toEndOf="@id/guideline_begin"
+            app:layout_constraintStart_toEndOf="@id/guideline_center"
             app:layout_constraintTop_toBottomOf="@id/characterSpecies" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline_begin"
-            android:layout_width="@dimen/default_size"
-            android:layout_height="@dimen/default_size"
+            android:id="@+id/guideline_center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_begin="@dimen/guideLine_begin_size" />
+            app:layout_constraintGuide_percent="0.5" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_end"
