add README file

--- a/feature-detail/src/main/res/values/dimens.xml
+++ b/feature-detail/src/main/res/values/dimens.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="image_size">190dp</dimen>
+    <dimen name="image_size">0dp</dimen>
     <dimen name="card_height">190dp</dimen>
     <dimen name="card_margin">15dp</dimen>
     <dimen name="card_elevation">25dp</dimen>
@@ -9,4 +9,5 @@
     <dimen name="guideLine_end_size">20dp</dimen>
     <dimen name="default_size">0dp</dimen>
     <dimen name="text_size">32sp</dimen>
+    <dimen name="text_margin">10dp</dimen>
 </resources>
