--- a/feature-detail/src/main/res/layout/detail.xml
+++ b/feature-detail/src/main/res/layout/detail.xml
@@ -6,13 +6,14 @@
     android:layout_height="@dimen/card_height"
     android:layout_margin="@dimen/card_margin"
     app:cardCornerRadius="@dimen/card_corner_radius"
-    app:cardElevation="@dimen/card_elevation">
+    app:cardElevation="@dimen/card_elevation"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/characterImage"
@@ -20,6 +21,7 @@
             android:layout_height="@dimen/image_size"
             android:contentDescription="@string/character_image_description"
             android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/guideline_center"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -29,7 +31,7 @@
             android:id="@+id/characterName"
             android:layout_width="@dimen/default_size"
             android:layout_height="wrap_content"
-            android:text="@string/character_name"
+            android:layout_marginStart="@dimen/text_margin"
             app:layout_constraintBottom_toTopOf="@id/characterGender"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
             app:layout_constraintStart_toEndOf="@id/guideline_center"
@@ -40,7 +42,7 @@
             android:id="@+id/characterGender"
             android:layout_width="@dimen/default_size"
             android:layout_height="wrap_content"
-            android:text="@string/character_gender"
+            android:layout_marginStart="@dimen/text_margin"
             app:layout_constraintBottom_toTopOf="@id/characterStatus"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
             app:layout_constraintStart_toEndOf="@id/guideline_center"
@@ -50,7 +52,7 @@
             android:id="@+id/characterStatus"
             android:layout_width="@dimen/default_size"
             android:layout_height="wrap_content"
-            android:text="@string/character_status"
+            android:layout_marginStart="@dimen/text_margin"
             app:layout_constraintBottom_toTopOf="@id/characterSpecies"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
             app:layout_constraintStart_toEndOf="@id/guideline_center"
@@ -60,7 +62,7 @@
             android:id="@+id/characterSpecies"
             android:layout_width="@dimen/default_size"
             android:layout_height="wrap_content"
-            android:text="@string/characters_species"
+            android:layout_marginStart="@dimen/text_margin"
             app:layout_constraintBottom_toTopOf="@id/characterCreated"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
             app:layout_constraintStart_toEndOf="@id/guideline_center"
@@ -70,7 +72,7 @@
             android:id="@+id/characterCreated"
             android:layout_width="@dimen/default_size"
             android:layout_height="wrap_content"
-            android:text="@string/character_created"
+            android:layout_marginStart="@dimen/text_margin"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/guideline_end"
             app:layout_constraintStart_toEndOf="@id/guideline_center"
@@ -78,8 +80,8 @@
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline_center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/default_size"
+            android:layout_height="@dimen/default_size"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.5" />
 
